First mockup summary cards of data

--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
 <body>
   <script src="./src/main.js"></script>
   <script src="./src/dirty.js"></script>
+
+  <div id="summaries" class="summaries"></div>
+  <div id="main" class="main"></div>
 </body>
 </html>
