--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
   <script src="http://vega.github.io/datalib/datalib.min.js"></script>
 </head>
 <body>
-  <script src="./src/main.js"></script>
   <script src="./src/dirty.js"></script>
-
+  <script src="./src/robustness.js"></script>
+  <script src="./src/main.js"></script>
+  
   <div id="summaries" class="summaries"></div>
   <div id="main" class="main"></div>
 </body>
