--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="./src/style.css" />
   <script src="https://d3js.org/d3.v5.min.js"></script>
-  <script src="http://vega.github.io/datalib/datalib.min.js"></script>
+  <script src="https://vega.github.io/datalib/datalib.min.js"></script>
 </head>
 <body>
   <script src="./src/dirty.js"></script>
   <script src="./src/robustness.js"></script>
   <script src="./src/main.js"></script>
-  
+
   <div id="summaries" class="summaries"></div>
   <div id="main" class="main"></div>
 </body>
